--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,22 +1,23 @@
-.List {
-    list-style: none;
-    margin: 0 auto;
-    padding: 0;
-    width: 280px;
+.list {
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+  width: 280px;
 }
 
-.ListItem {
-    margin: 0;
-    padding: 10px;
-    box-sizing: border-box;
-    width: 100%;
-    border: 1px solid #521751;
-    background-color: white;
-    text-align: center;
-    cursor: pointer;
+.list-item {
+  margin: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 100%;
+  border: 1px solid #715e71;
+  background-color: white;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 4px;
 }
 
-.ListItem:hover,
-.ListItem:active {
-    background-color: #ccc;
+.list-item:hover,
+.list-item:active {
+  background-color: #ccc;
 }
