--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,13 +1,21 @@
-.Modal {
-    position: fixed;
-    z-index: 200;
-    border: 1px solid #eee;
-    box-shadow: 0 2px 2px #ccc;
-    background-color: white;
-    padding: 10px;
-    text-align: center;
-    box-sizing: border-box;
-    top: 30%;
-    left: 25%;
-    width: 50%;
+.modal {
+  position: fixed;
+  z-index: 11;
+  box-shadow: 0 2px 7px #3232322a;
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  box-sizing: border-box;
+  top: 30%;
+  left: 25%;
+  width: 50%;
+  border-radius: 10px;
+}
+
+.modal.open {
+  display: block;
+}
+
+.modal.closed {
+  display: none;
 }
